kubernetes/apps/base/backup/minio/ingress.yaml
# MinIO Console Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: backup
  labels:
    app.kubernetes.io/name: minio-console
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - minio.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: minio.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 80
